# spherical_uniform_sampling

./: .gitignore  LICENSE  LISENCE  README.md  pyproject.toml  requirements.txt  setup.py  test.py
src/qspace_direction/: combine_bvec_bval.py  direction_continous_optimization.py  direction_flip.py  direction_geem.py  direction_generation.py  direction_order.py  direction_subsampling.py  io_util.py
src/qspace_direction/lib/: __init__.py  io_util.py
src/qspace_direction/sampling/: __init__.py  cnlo.py  flip.py  geem.py  loss.py  milp.py  packing_density.py  subsample.py
src/qspace_direction/scripts/: combine_bvec_bval.py  direction_continous_optimization.py  direction_flip.py  direction_geem.py  direction_generation.py  direction_order.py  direction_statistics.py  direction_subsampling.py
src/spherical_uniform_sampling/: __init__.py
src/spherical_uniform_sampling/lib/: io_util.py
src/spherical_uniform_sampling/sampling/: cnlo.py  loss.py  packing_density.py
src/spherical_uniform_sampling/scripts/: combine_bvec_bval.py  direction_continous_optimization.py  direction_flip.py  direction_geem.py  direction_generation.py  direction_order.py  direction_statistics.py  direction_subsampling.py  direction_view.py
