[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qspace_direction"
version = "0.0.1"
dependencies = [
  "numpy >= 1.19.5",
  "scipy >= 1.10.0",
  "gurobipy >= 10.0.0",
  "docopt == 0.6.2"
]
authors = [
  { name="Si-Miao Zhang", email="zhsm.2002@outlook.com" },
]
description = "A package for generate sampling scheme in qspace"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]